tests/NormalTests/paczka1/fuzzy1/35018599.err
Error in line 4: ibg2pTiW5V2 S23 58,6
Error in line 3: kaCdjv S23 97,0
Error in line 7: kaCdjv S556 93,1
Error in line 19: EmfulDcIHv0 S78 22,1
Error in line 27: w4r S78 26,0
Error in line 29: c2lUsyH S556 51,8
Error in line 21: ibg2pTiW5V2 A828 32,9
